<resources>
    <string name="app_name">XO</string>
    <string name="x_wins">X Wins</string>
    <string name="x_turn">X Turn</string>
    <string name="o_wins">O Wins</string>
    <string name="o_turn">O Turn</string>
    <string name="draw">DRAW</string>
    <string name="dot">•</string>
    <string name="join_room">Join room</string>
    <string name="room_is_full">Room is full</string>
    <string name="room_name">Room Name</string>
    <string name="create_room">Create Room</string>
    <string name="room_was_created">Room was created</string>
    <string name="enter_room_name">Enter room name:</string>
    <string name="tic_tac_toe_caps">TIC TAC TOE</string>
    <string name="local_game">Local Game</string>
    <string name="online_game">Online Game</string>
    <string name="exit_to_menu">Exit to Menu</string>
    <string name="reset_game">Reset Game</string>
    <string name="new_game">New Game</string>
    <string name="go_back_to_menu">Go Back to Menu</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_underline">Title underline</string>
</resources>