<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/create_room_dialog_background"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/tvCreateRoomDialogTitle"
        style="@style/turquoise_text"
        android:textSize="@dimen/primary_text"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/enter_room_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCreateRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateRoomDialogTitle">

        <EditText
            android:id="@+id/etRoomName"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/crayons_regular"
            android:hint="@string/room_name"
            android:maxLength="8"
            android:maxLines="1"
            android:textColorHint="@color/dialog_hint"
            android:textSize="@dimen/secondary_text" />

        <TextView
            android:id="@+id/tvHash"
            style="@style/turquoise_text"
            android:textSize="@dimen/secondary_text"
            android:text="#" />

        <TextView
            android:id="@+id/tvRndNumber"
            style="@style/turquoise_text"
            android:textSize="@dimen/secondary_text"
            android:text="5624" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvCreateRoom"
        style="@style/turquoise_text"
        android:textSize="@dimen/secondary_text"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCancel"
        style="@style/turquoise_text"
        android:textSize="@dimen/secondary_text"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>