<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/purple"
    tools:context=".fragments.GameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTopGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameFragmentTitle"
            style="@style/turquoise_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tic_tac_toe_caps"
            android:textSize="@dimen/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:src="@drawable/title_line"
            android:contentDescription="@string/title_underline"
            app:layout_constraintEnd_toEndOf="@+id/gameFragmentTitle"
            app:layout_constraintStart_toStartOf="@+id/gameFragmentTitle"
            app:layout_constraintTop_toBottomOf="@+id/gameFragmentTitle"
            app:tint="@color/green" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/tvXscore"
                style="@style/green_text"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvScore1"
                tools:text="0" />

            <TextView
                android:id="@+id/tvColon"
                style="@style/green_text"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text=":"
                android:textSize="@dimen/primary_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvOscore"
                app:layout_constraintStart_toEndOf="@+id/tvXscore"
                app:layout_constraintTop_toBottomOf="@+id/tvScore1" />


            <TextView
                android:id="@+id/tvOscore"
                style="@style/green_text"
                android:layout_marginEnd="16dp"
                android:textSize="@dimen/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvScore2"
                tools:text="0" />


            <TextView
                android:id="@+id/tvScore1"
                style="@style/turquoise_text"
                android:text="X Score"
                android:textSize="@dimen/small_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvScore2"
                style="@style/turquoise_text"
                android:text="O Score"
                android:textSize="@dimen/small_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvXdot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dot"
            android:textColor="@color/yellow"
            android:textSize="@dimen/primary_text"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/constraintScore"
            app:layout_constraintEnd_toStartOf="@+id/constraintScore"
            app:layout_constraintTop_toTopOf="@+id/constraintScore" />

        <TextView
            android:id="@+id/tvOdot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dot"
            android:textColor="@color/pink"
            android:textSize="@dimen/primary_text"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/constraintScore"
            app:layout_constraintStart_toEndOf="@+id/constraintScore"
            app:layout_constraintTop_toTopOf="@+id/constraintScore" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMiddleGame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutBottomGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTopGame">

        <TextView
            android:id="@+id/tvWinner"
            style="@style/turquoise_text"
            android:textSize="@dimen/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="winner" />

        <FrameLayout
            android:id="@+id/board_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBottomGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNewGame"
            style="@style/green_text"
            android:textSize="@dimen/primary_text"
            android:text="@string/new_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResetGame"
            style="@style/green_text"
            android:textSize="@dimen/primary_text"
            android:text="@string/reset_game"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvExitToMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNewGame" />

        <TextView
            android:id="@+id/tvExitToMenu"
            style="@style/green_text"
            android:textSize="@dimen/primary_text"
            android:text="@string/exit_to_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>